--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           </article>
         </div>
       </section>
-      <section class="thirdsection">
+      <section class="thirdsection" id="counts">
         <div>
           <article>
             <h3><i class="fa-solid fa-face-smile"></i> 232</h3>
@@ -161,7 +161,7 @@
           </article>
         </div>
       </section>
-      <section class="forthsection">
+      <section class="forthsection" id="action">
         <h3>call to action</h3>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea itaque
@@ -213,7 +213,7 @@
           </div>
         </div>
       </section>
-      <section class="sixthsection">
+      <section class="sixthsection" id="testi">
         <h3>testimonials</h3>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum omnis
@@ -278,31 +278,44 @@
             </p>
           </div>
           <div class="people">
-            <div class="glassesguy">
-              <div class="pic">
-                <img src="team/team-1.jpg" alt="glassesguy" />
-              </div>
+            <div class="team" id="team1">
+              <img src="team/team-1.jpg" alt="glassesguy" />
               <div class="info">
                 <h4>walter white</h4>
                 <p>chief executive officer</p>
+                <div class="socials">
+                  <i class="fa-brands fa-twitter"></i>
+                  <i class="fa-brands fa-facebook"></i>
+                  <i class="fa-brands fa-instagram"></i>
+                  <i class="fa-brands fa-linkedin"></i>
+                </div>
               </div>
             </div>
-            <div class="cutegirl">
-              <div class="pic">
-                <img src="team/team-2.jpg" alt="cutegirl" />
-              </div>
+            <div class="team" id="team2">
+              <img src="team/team-2.jpg" alt="cutegirl" />
               <div class="info">
                 <h4>sarah jhonson</h4>
                 <p>product manager</p>
+                <div class="socials">
+                  <i class="fa-brands fa-twitter"></i>
+                  <i class="fa-brands fa-facebook"></i>
+                  <i class="fa-brands fa-instagram"></i>
+                  <i class="fa-brands fa-linkedin"></i>
+                </div>
               </div>
             </div>
-            <div class="glassesguy2">
-              <div class="pic">
-                <img src="team/team-3.jpg" alt="glassesguy2" />
-              </div>
+            <div class="team" id="team3">
+              <img src="team/team-3.jpg" alt="glassesguy2" />
+
               <div class="info">
                 <h4>william anderson</h4>
                 <p>CTO</p>
+                <div class="socials">
+                  <i class="fa-brands fa-twitter"></i>
+                  <i class="fa-brands fa-facebook"></i>
+                  <i class="fa-brands fa-instagram"></i>
+                  <i class="fa-brands fa-linkedin"></i>
+                </div>
               </div>
             </div>
           </div>
@@ -319,6 +332,7 @@
               ipsam iusto numquam.
             </p>
           </div>
+
           <div class="AEC">
             <div class="adress">
               <i class="fa-solid fa-location-dot"></i>
@@ -341,7 +355,7 @@
               <iframe
                 src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d24194.891570590225!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown%20Conference%20Center!5e0!3m2!1sen!2sbg!4v1659798689836!5m2!1sen!2sbg"
                 width="630"
-                height="370"
+                height="420"
                 style="border: 0"
                 allowfullscreen=""
                 loading="lazy"
@@ -352,6 +366,7 @@
               <form action="" method="post">
                 <div class="plswork">
                   <input
+                    class="same"
                     type="text"
                     id="name"
                     name="name"
@@ -359,38 +374,44 @@
                     required
                   />
                   <input
+                    class="same"
                     type="email"
                     id="email"
                     name="email"
                     placeholder=" &nbsp; &nbsp;Your Email"
                   />
                 </div>
-                <div class="subject">
-                  <input
-                    type="text"
-                    id="about"
-                    name="about"
-                    placeholder=" &nbsp; &nbsp;Subject"
-                  />
-                </div>
-                <div class="message">
-                  <textarea
-                    name="message"
-                    id="message"
-                    cols="70"
-                    rows="6"
-                    placeholder=" &nbsp; &nbsp;Message"
-                  ></textarea>
-                </div>
-                <div class="button">
-                  <button type="submit">send message</button>
-                </div>
+
+                <input
+                  class="same"
+                  type="text"
+                  id="about"
+                  name="about"
+                  placeholder=" &nbsp; &nbsp;Subject"
+                />
+
+                <textarea
+                  class="same"
+                  name="message"
+                  id="Message"
+                  cols="70"
+                  rows="6"
+                  placeholder=" &nbsp; &nbsp;Message"
+                ></textarea>
+                <button>Send Message</button>
               </form>
             </div>
           </div>
         </div>
       </section>
+
+
+
+
+
       <footer>
+        <div class="container">
+      <div class="absoforad">
         <address>
           <h3>Squadfree</h3>
           <p class="p1">
@@ -405,29 +426,37 @@
             <p><span>phone:</span> +1 5589 55488 55</p>
             <p><span>Email:</span>info@example.com</p>
           </div>
+          <div class="p4">
+            <i class="fa-brands fa-square-twitter"></i>
+            <i class="fa-brands fa-square-facebook"></i>
+            <i class="fa-brands fa-square-instagram"></i>
+            <i class="fa-brands fa-skype"></i>
+            <i class="fa-brands fa-linkedin"></i>
+          </div>
         </address>
-        <div class="LSN">
+      </div>
+      <div class="LSN">
           <div class="links">
             <h3>useful links</h3>
             <ul>
               <li>
-                <i class="fa-solid fa-angle-right"></i> <a href="#home">home</a>
+                <i class="fa-solid fa-angle-right"></i> <a href="#home">&nbsp;&nbsp;home</a>
               </li>
               <li>
                 <i class="fa-solid fa-angle-right"></i>
-                <a href="#aboutus">about us</a>
+                <a href="#aboutus">&nbsp;&nbsp;about us</a>
               </li>
               <li>
                 <i class="fa-solid fa-angle-right"></i>
-                <a href="#services">services</a>
+                <a href="#services">&nbsp;&nbsp;services</a>
               </li>
               <li>
                 <i class="fa-solid fa-angle-right"></i>
-                <a href="">terms of service</a>
+                <a href="">&nbsp;&nbsp;terms of service</a>
               </li>
               <li>
                 <i class="fa-solid fa-angle-right"></i>
-                <a href="">privacy policy</a>
+                <a href="">&nbsp;&nbsp;privacy policy</a>
               </li>
             </ul>
           </div>
@@ -436,22 +465,22 @@
             <ul>
               <li>
                 <i class="fa-solid fa-angle-right"></i>
-                <a href="">web design</a>
+                <a href="">&nbsp;&nbsp;web design</a>
               </li>
               <li>
                 <i class="fa-solid fa-angle-right"></i>
-                <a href="">web development</a>
+                <a href="">&nbsp;&nbsp;web development</a>
               </li>
               <li>
                 <i class="fa-solid fa-angle-right"></i>
-                <a href="">product management</a>
+                <a href="">&nbsp;&nbsp;product management</a>
               </li>
               <li>
-                <i class="fa-solid fa-angle-right"></i> <a href="">marketing</a>
+                <i class="fa-solid fa-angle-right"></i> <a href="">&nbsp;&nbsp;marketing</a>
               </li>
               <li>
                 <i class="fa-solid fa-angle-right"></i>
-                <a href="">graphic design</a>
+                <a href="">&nbsp;&nbsp;graphic design</a>
               </li>
             </ul>
           </div>
@@ -462,17 +491,18 @@
               veniam labore molestias perferendis vero!
             </p>
             <form class="flexpls" method="post">
-              <input type="email" id="mail" name="mail" />
-              <input type="submit" value="subscribe" name="subscribe" />
+              <input class="lastd"  type="email" id="mail" name="mail" />
+              <button class="lastd">Subscribe</button>
             </form>
           </div>
         </div>
+      </div>
         <div class="lastone">
           <p>
-            &copy; &nbsp;&nbsp; Copyright <span>Squadfree</span>. All Rights
+            &copy; &nbsp; Copyright <span>Squadfree</span>. All Rights
             Reserved
           </p>
-          <p>Designed by BootstrapMade</p>
+          <p id="boots">Designed by <span>BootstrapMade</span></p>
           <a id="buttonthing" href="#home"
             ><i class="fa-solid fa-arrow-up"></i
           ></a>
